--- a/modules/samples/identity-mgt/info-recovery-sample/src/main/webapp/assets/css/customize-template.css
+++ b/modules/samples/identity-mgt/info-recovery-sample/src/main/webapp/assets/css/customize-template.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005-2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ * Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  *
  * WSO2 Inc. licenses this file to you under the Apache License,
  * Version 2.0 (the "License"); you may not use this file except
@@ -6352,15 +6352,6 @@ a.badge:hover {
     position: fixed;
 }
 
-/*!
- * Datepicker for Bootstrap
- *
- * Copyright 2012 Stefan Petre
- * Improvements by Andrew Rowls
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- */
 .datepicker {
     top: 0;
     left: 0;
