IDENTITY-3732 Changes to the Associated User Accounts UI
Conflicts:
	modules/jaggery-apps/portal/gadgets/connected_accounts/js/gadget.js

--- a/modules/jaggery-apps/portal/gadgets/connected_accounts/js/ui/css/main.css
+++ b/modules/jaggery-apps/portal/gadgets/connected_accounts/js/ui/css/main.css
@@ -292,3 +292,15 @@ ul.dropdown-menu li a:hover{
     background: #222;
 
 }
+.fedarate{
+    background: transparent url(../img/trust.png) no-repeat;
+    display: inline-block;
+    width: 16px;
+    height:13px;
+}
+.resident-idp{
+    background: transparent url(../img/resident-idp.png) no-repeat;
+    display: inline-block;
+    width: 16px;
+    height:16px;
+}
