--- a/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
+++ b/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
@@ -1,3 +1,12 @@
 {{layout "org.wso2.carbon.uuf.is.foundation.main"}}
 {{title "Home | " @config.appName}}
 <h1>it works !</h1>
+{{#fillZone "content"}}
+    <h3>User Portal</h3>
+    <hr />
+    <p>User portal user stories.</p>
+    <ul>
+        <li><a href="{{@contextPath}}/user/self-signup">New user? Sign-up here!</a></li>
+        <li><a href="{{@contextPath}}/user/default-attributes">My default profile attributes</a></li>
+    </ul>
+{{/fillZone}}
