Fixed some build issues and added i18n.

--- a/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
+++ b/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
@@ -1,8 +1,7 @@
 {{layout "org.wso2.carbon.uuf.is.foundation.main"}}
 {{title "Home | " @config.appName}}
-<h1>it works !</h1>
 {{#fillZone "content"}}
-    <h3>User Portal</h3>
+    <h3>{{t "user.portal.title"}}</h3>
     <hr />
     <p>User portal user stories.</p>
     <ul>
