Added few user stories

--- a/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
+++ b/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/index.hbs
@@ -6,6 +6,7 @@
     <p>User portal user stories.</p>
     <ul>
         <li><a href="{{@contextPath}}/user/self-signup">New user? Sign-up here!</a></li>
-        <li><a href="{{@contextPath}}/user/default-attributes">My default profile attributes</a></li>
+        <li><a href="{{@contextPath}}/user/attribute-profile/default-attributes">My default profile attributes</a></li>
+        <li><a href="{{@contextPath}}/user/attribute-profile/select-for-new-attribute-profile">New profile attributes</a></li>
     </ul>
 {{/fillZone}}
