--- a/portal/user/components/org.wso2.carbon.uuf.is.foundation/src/main/layouts/main.hbs
+++ b/portal/user/components/org.wso2.carbon.uuf.is.foundation/src/main/layouts/main.hbs
@@ -41,7 +41,13 @@
 
 <div class="page-content-wrapper">
     <div class="container-fluid body-wrapper">
-        {{defineZone "content"}}
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                {{defineZone "content"}}
+            </div>
+            <div class="col-md-3"></div>
+        </div>
     </div>
 </div>
 <!-- footer -->
