--- a/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/user/attribute-profile/select-for-new-attribute-profile.hbs
+++ b/portal/user/app/org.wso2.carbon.is.user-portal/src/main/pages/user/attribute-profile/select-for-new-attribute-profile.hbs
@@ -1,7 +1,7 @@
 {{layout "org.wso2.carbon.uuf.is.foundation.main"}}
 {{title "Home | " @config.appName}}
 {{#fillZone "content"}}
-    <h3>My default attributes</h3>
+    <h3>Select the attribute profile to update</h3>
     <hr />
 
 {{/fillZone}}
