Chnaged some config files

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -9,10 +9,15 @@
     <div class="row">
         <div class="media tab-responsive">
             <div class="media-left col-xs-1 col-sm-1 col-md-2 col-lg-2 hidden-xs">
-                <ul class="list-group nav nav-pills nav-stacked" role="tablist">
-                    <li class="list-group-item"><a href="{{@contextPath}}/users/self-signup"><i class="fw fw-add
+                <ul class="list-group nav nav-pills nav-stacked" role="tablist" style="width:100%;">
+                    <li class="list-group-item"><a href="{{@contextPath}}/user/self-signup"><i class="fw fw-add
                     fw-2x"></i>
                         {{t "user-portal.user.add"}}</a></li>
+                </ul>
+                <ul class="list-group nav nav-pills nav-stacked" role="tablist" style="width:100%;">
+                    <li class="list-group-item"><a href="{{@contextPath}}/user/account/account-setting"><i class="fw fw-add
+                    fw-2x"></i>
+                        {{t "user-portal.user.account.setting"}}</a></li>
                 </ul>
             </div>
         </div>
