--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/user/signup.hbs
@@ -6,16 +6,16 @@
     <hr />
     <form method="post" class="form-horizontal">
         <div class="form-group">
-            <label for="userName">User Name</label>
-            <input type="text" name="userName" id="userName" class="form-control" placeholder="userName" />
+            <label for="username">User Name</label>
+            <input type="text" name="username" id="username" class="form-control" placeholder="Username" />
         </div>
         <div class="form-group">
-            <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" class="form-control" placeholder="firstName" />
+            <label for="firstname">First Name</label>
+            <input type="text" name="firstname" id="firstname" class="form-control" placeholder="First name" />
         </div>
         <div class="form-group">
-            <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lastName" class="form-control" placeholder="lastName" />
+            <label for="lastname">Last Name</label>
+            <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Last name" />
         </div>
         <input type="submit" value="Register" />
     </form>
