--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -45,9 +45,19 @@
         <div class="media tab-responsive">
             <div class="media-left col-xs-1 col-sm-1 col-md-2 col-lg-2 hidden-xs">
                 <ul class="list-group nav nav-pills nav-stacked" role="tablist">
-                    <li class="list-group-item"><a href="{{@contextPath}}/users/self-signup"><i class="fw fw-add
+                    <li class="list-group-item"><a href="{{@contextPath}}/login"><i class="fw fw-add
                     fw-2x"></i>
                         {{t "user-portal.user.add"}}</a></li>
+                </ul>
+                <ul class="list-group nav nav-pills nav-stacked" role="tablist">
+                    <li class="list-group-item"><a href="{{@contextPath}}/user/signup"><i class="fw fw-add
+                    fw-2x"></i>
+                        {{t "user-portal.user.add"}}</a></li>
+                </ul>
+                <ul class="list-group nav nav-pills nav-stacked" role="tablist">
+                    <li class="list-group-item"><a href="{{@contextPath}}/user/reset-password"><i class="fw fw-add
+                    fw-2x"></i>
+                        {{t "user-portal.user.password.reset"}}</a></li>
                 </ul>
             </div>
         </div>
