fixing url links

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -70,8 +70,8 @@
                                         <button type="submit" class="btn btn-default btn-secondary hidden-xs hidden-sm">Go Back</button>
                                     </div>
                                 </div>
-                                <a href="{{@contextPath}}/user/reset-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>
-                                <p class="hidden-xs hidden-sm">Don't have an account? <a href="{{@contextPath}}/user/signup">Register Now</a></p>
+                                <a href="{{@contextPath}}/account/reset-password" class="add-margin-bottom-5x remove-margin-lg remove-margin-md">Forgot Password</a>
+                                <p class="hidden-xs hidden-sm">Don't have an account? <a href="{{@contextPath}}/account/signup">Register Now</a></p>
                             </form>
                         </div>
                         <div class="social-container visible-sm visible-xs">
