fixing url links

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -50,12 +50,12 @@
                         {{t "user-portal.user.add"}}</a></li>
                 </ul>
                 <ul class="list-group nav nav-pills nav-stacked" role="tablist">
-                    <li class="list-group-item"><a href="{{@contextPath}}/user/signup"><i class="fw fw-add
+                    <li class="list-group-item"><a href="{{@contextPath}}/account/signup"><i class="fw fw-add
                     fw-2x"></i>
                         {{t "user-portal.user.add"}}</a></li>
                 </ul>
                 <ul class="list-group nav nav-pills nav-stacked" role="tablist">
-                    <li class="list-group-item"><a href="{{@contextPath}}/user/reset-password"><i class="fw fw-add
+                    <li class="list-group-item"><a href="{{@contextPath}}/account/reset-password"><i class="fw fw-add
                     fw-2x"></i>
                         {{t "user-portal.user.password.reset"}}</a></li>
                 </ul>
