--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/reset-password.hbs
@@ -4,20 +4,23 @@
 {{#fillZone "content"}}
     <h3>{{t "user-portal.user.password.reset"}}</h3>
     <hr />
-    <h4>TODO</h4>
+    <div class="alert alert-info" role="alert">
+        <i class="icon fw fw-warning"></i>
+        In order to update your password, you should re-enter your current password.
+    </div>
     <form method="post" class="form-horizontal">
         <div class="form-group">
-            <label for="userName">User Name</label>
-            <input type="text" name="userName" id="userName" class="form-control" placeholder="userName" />
+            <label for="oldPassword">Old Password</label>
+            <input type="text" name="oldPassword" id="oldPassword" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" class="form-control" placeholder="firstName" />
+            <label for="newPassword">New Password</label>
+            <input type="text" name="newPassword" id="newPassword" class="form-control" />
         </div>
         <div class="form-group">
-            <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lastName" class="form-control" placeholder="lastName" />
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="text" name="confirmPassword" id="confirmPassword" class="form-control" />
         </div>
-        <input type="submit" value="Register" />
+        <input type="submit" value="Update" />
     </form>
 {{/fillZone}}
