Added tab view to the user portal

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -24,6 +24,11 @@
                     fw-2x"></i>
                         {{t "user-portal.user.password.reset"}}</a></li>
                 </ul>
+                <ul class="list-group nav nav-pills nav-stacked" role="tablist">
+                    <li class="list-group-item"><a href="{{@contextPath}}/account/account-setting"><i class="fw fw-add
+                    fw-2x"></i>
+                        {{t "user-portal.user.account.setting"}}</a></li>
+                </ul>
             </div>
         </div>
     </div>
