--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/account-setting.hbs
@@ -53,28 +53,28 @@
                 <td style="width:20%; vertical-align:top;">
                     <ul class="nav nav-pills nav-stacked nav-filter" id="stacked-menu">
                         <li class="active"><a data-toggle="collapse" data-parent="#stacked-menu" href="#p1"
-                                              class="">Profile<span class="caret arrow"></span></a>
+                                              class="">{{t "user-portal.user.account.profile"}}<span class="caret arrow"></span></a>
                             <ul class="nav nav-pills nav-stacked collapse in" id="p1">
 
                                 <li><a href="{{@contextPath}}/account/profile/default-profile" class="profile"
-                                       id="profileDefault">Default</a>
+                                       id="profileDefault">{{t "user-portal.user.account.profile.default"}}</a>
                                 </li>
-                                <li><a href="#" class="profile" id="profileSalesforce">Salesforce</a>
+                                <li><a href="#" class="profile" id="profileSalesforce">{{t "user-portal.user.account.profile.salesforce"}}</a>
                                 </li>
-                                <li><a href="#" class="profile" id="profileTwitter">Twitter</a>
+                                <li><a href="#" class="profile" id="profileTwitter">{{t "user-portal.user.account.profile.twitter"}}</a>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="#" class="">Password<span class="caret arrow"></span></a>
+                        <li><a href="#" class="">{{t "user-portal.user.account.password"}}<span class="caret arrow"></span></a>
                         </li>
-                        <li><a href="#" class="">Security Question(s)<span class="caret arrow"></span></a>
+                        <li><a href="#" class="">{{t "user-portal.user.account.securityQ"}}<span class="caret arrow"></span></a>
                         </li>
-                        <li><a data-toggle="collapse" data-parent="#stacked-menu" href="#p2" class="">Associations<span
+                        <li><a data-toggle="collapse" data-parent="#stacked-menu" href="#p2" class="">{{t "user-portal.user.account.association"}}<span
                                 class="caret arrow"></span></a>
                             <ul class="nav nav-pills nav-stacked collapse" id="p2">
-                                <li><a href="#" class="">Local</a>
+                                <li><a href="#" class="">{{t "user-portal.user.account.association.local"}}</a>
                                 </li>
-                                <li><a href="#" class="">Federated</a>
+                                <li><a href="#" class="">{{t "user-portal.user.account.association.federated"}}</a>
                                 </li>
                             </ul>
                         </li>
