--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/profile/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/profile/index.hbs
@@ -1,10 +1,21 @@
 {{layout "org.wso2.carbon.uuf.common.foundation.main"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Profile | " @config.appName}}
+{{css "css/user-portal.css"}}
 {{#fillZone "content"}}
     <h3>{{t "user-portal.user.profile"}}</h3>
     <hr/>
     <form method="post" class="form-horizontal">
+        <div class="form-group">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                <div class="thumbnail icon">
+                    <div class="square-element setbgcolor">
+                        <a class="sub-icon" title="Edit"><i class="fw fw-camera fw-lg"></i></a>
+                        <div class="user-name-icon">D</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             <label for="username">{{t "user-portal.user.profile.username"}}</label>
             <input type="text" name="username" id="username" class="form-control" placeholder="username"
