Adding Account settings template
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/js/account-setting.js

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/profile/default-profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/profile/default-profile.hbs
@@ -1,4 +1,4 @@
-{{layout "account-setting"}}
+{{layout "main"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
 {{js "js/user-account.js"}}
