--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -1,12 +1,90 @@
-{{layout "account-setting"}}
+{{layout "main"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
-{{js "js/user-account.js"}}
-{{css "css/custom.css"}}
+{{js "js/account-setting.js"}}
+{{css "css/user-portal.css"}}
 
 {{#fillZone "content"}}
-    <div class="page-content">
-        <div class="row" id="account-content">
+    <div class="body-wrapper acc-settings">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="page-header">
+                        <h1>Account Settings</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="settings-nav sidebar-nav">
+                        <ul class="nav nav-pills nav-stacked nav-filter" id="acc-settings-menu">
+                            <li class="active">
+                                <a href="#profile" class="" data-toggle="tab">Profile</a>
+                            </li>
+                            <li>
+                                <a href="#password" class="" data-toggle="tab">Password</a>
+                            </li>
+                            <li>
+                                <a href="#authentication" class="" data-toggle="tab">Multi-Factor Authentication</a>
+                            </li>
+                            <li>
+                                <a href="#security-questions" class="" data-toggle="tab">Security Question(s)</a>
+                            </li>
+                            <li class="collapse-li">
+                                <a data-toggle="collapse" data-parent="#acc-settings-menu" href="#asscciations-menu" class="collapsed">Associations<span class="arrow"></span></a>
+                                <ul class="sub-menu collapse" id="asscciations-menu">
+                                    <li>
+                                        <a href="#local" class="" data-toggle="tab">Local</a>
+                                    </li>
+                                    <li>
+                                        <a href="#federated" class="" data-toggle="tab">Federated</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- page content -->
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="profile">
+                            <div class="col-md-12">
+                                {{fragment "org.wso2.carbon.iam.user-portal.feature.profile"}}
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="password">
+                            <h3>Password</h3>
+                            <div class="col-md-12">
+
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="authentication">
+                            <h3>Multi-Factor Authentication</h3>
+                            <div class="col-md-12">
+
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="security-questions">
+                            <h3>Security Question(s)</h3>
+                            <div class="col-md-12">
+
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="local">
+                            <h3>Local Associations</h3>
+                            <div class="col-md-12">
+
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="federated">
+                            <h3>Federated Associations</h3>
+                            <div class="col-md-12">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
         </div>
     </div>
 {{/fillZone}}
