--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -56,7 +56,7 @@
                     </div>
 
                     <!-- page content -->
-                    <div class="tab-content">
+                    <div class="tab-content settings-content">
                         <div class="tab-pane" id="default">
                             <div class="col-md-12">
                                 {{fragment "org.wso2.carbon.iam.user-portal.feature.profile"}}
