Clearing userportal landing page

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/main.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/layouts/main.hbs
@@ -34,7 +34,7 @@
                     <span class="hidden-xs add-margin-left-1x">John Doe <span class="caret"></span></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right slideInDown" role="menu">
-                    <li><a href="#">Account Settings</a></li>
+                    <li><a href="{{@contextPath}}/account/account-setting">Account Settings</a></li>
                     <li><a href="#">Logout</a></li>
                 </ul>
             </li>
@@ -46,8 +46,8 @@
 <!-- breadcrumb -->
 <div class="breadcrumb-wrapper">
     <ol class="breadcrumb">
-        <li><a href="/">Account Settings</a></li>
-        <li class="active"><a href="header">Profile</a></li>
+        <li><a href="/"></a></li>
+        <li class="active"><a href="header"></a></li>
     </ol>
 </div>
 
