--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -15,34 +15,34 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="username">{{t "user-portal.user.profile.username"}}</label>
             <input type="text" name="username" id="username" class="form-control" placeholder="username"
-                   value="{{username}}" readonly/>
+                   value="" readonly/>
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="firstName">{{t "user-portal.user.profile.firstName"}}</label>
             <input type="text" name="firstName" id="firstName" class="form-control" placeholder="firstName"
-                   value="{{firstName}}"/>
+                   value=""/>
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="lastName">{{t "user-portal.user.profile.lastName"}}</label>
             <input type="text" name="lastName" id="lastName" class="form-control" placeholder="lastName"
-                   value="{{lastName}}"/>
+                   value=""/>
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="email">{{t "user-portal.user.profile.email"}}</label>
-            <input type="text" name="email" id="email" class="form-control" placeholder="email" value="{{email}}"/>
+            <input type="text" name="email" id="email" class="form-control" placeholder="email" value=""/>
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="telephone">{{t "user-portal.user.profile.telephone"}}</label>
             <input type="text" name="telephone" id="telephone" class="form-control" placeholder="telephone"
-                   value="{{telephone}}"/>
+                   value=""/>
         </div>
     </div>
     <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update"/>
