Adding update profile logic.
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.js
	portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
	portal/osgi-services/org.wso2.is.portal.user.client.api/src/main/java/org/wso2/is/portal/user/client/api/IdentityStoreClientServiceImpl.java

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -16,7 +16,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="{{this.claimURI}}">{{this.displayName}}</label>
             <input type="text" name="{{this.claimURI}}" id="{{this.claimURI}}" class="form-control"
-                   value="{{this.value}}" />
+                   value="{{this.value}}" {{this.readonly}}/>
         </div>
     </div>
     {{/each}}
