update user portal update password feature

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/account/account-setting.hbs
@@ -63,7 +63,7 @@
                         <div class="tab-pane" id="password">
                             <h3>Password</h3>
                             <div class="col-md-12">
-
+                                {{fragment "org.wso2.carbon.iam.user-portal.feature.reset-password"}}
                             </div>
                         </div>
                         <div class="tab-pane" id="authentication">
