Adding confirm password validation

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -13,7 +13,7 @@
         {{message}}
     </div>
 {{/if}}
-<form method="post" class="form-horizontal">
+<form method="post" class="form-horizontal" id="password-update-form">
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="oldPassword">{{t "user-portal.user.password.reset.old"}}</label>
@@ -45,7 +45,7 @@
     <div class="form-group">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
             <label for="confirmPassword">{{t "user-portal.user.password.reset.new.confirm"}}</label>
-            <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" />
+            <input type="password" name="confirmPassword" id="confirmPassword" name="confirmPassword" class="form-control" />
         </div>
     </div>
     <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update"/>
