--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -1,6 +1,6 @@
 <h3>{{t "user-portal.user.profile"}}</h3>
 <hr/>
-<form method="post" class="form-horizontal">
+<form method="post" class="form-horizontal" action="?{{profile}}">
     <div class="form-group">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <div class="thumbnail icon">
